--- a/src/pages/Smart_health_metrics.css
+++ b/src/pages/Smart_health_metrics.css
@@ -1,11 +1,12 @@
 .disease{
   padding: 6vh 9vh 5vh 9vh;
   height: auto;
+  flex: 1;
 }
 .disease h3{
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
-  font-size: 2.5em;
+  font-size: clamp(1.4rem, calc(2vw + 4vw), 2.5rem);
   font-weight: 700;
   margin-bottom: 5vh;
 }
@@ -87,17 +88,11 @@
   letter-spacing: 0.03vw;
 }
 .child .recording .btn:hover{
-  background-color: var(--secondaryColor);
-  color: var(--Red);
+  opacity: 0.7;
 }
 /* responsine design */
 @media (max-width: 1000px) {
   .child{
   flex-wrap: wrap;
 }
-}
-@media (max-width: 450px) {
-  .disease h3{
-    font-size: 1.6em;
-  }
 }
