--- a/src/pages/fill_information.css
+++ b/src/pages/fill_information.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 3vw 3vw 0vw 3vw;
+  gap: 2em;
 }
 .info h3{
   display: flex;
@@ -15,7 +16,6 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  margin-bottom: 4vh;
 }
 .info .infolbl{
   font-weight: 400;
@@ -35,6 +35,7 @@
   border-radius:0.625rem;
   align-items: center;
   padding: 1.1vh;
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.5rem);
 }
 .info .infolbl .menu{
   display: flex;
@@ -46,23 +47,18 @@
   border-radius:0.625rem;
   align-items: center;
   padding: 1.1vh;
-  font-size: 1.3em; 
-  position: relative;
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.5rem);  position: relative;
   justify-content: space-between;
   gap: 1.5rem;
   cursor: pointer;
 }
 .info .infolbl .menu .txt{
-  /* font-size: 1em;  */
-  /* color: #b1aeae;  */
-  /* font-style: italic; */
   font-family: 'Roboto',sans-serif;
-  font-size: 1.5rem;
-  font-style: normal;
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.5rem);  font-style: normal;
   font-weight: 400;
   line-height: 1.45019rem; 
+  color: #000;
 }
-
 .info .infolbl .menu .dropdown-content  {
   display: none;
   position: absolute;
@@ -76,7 +72,6 @@
   border-radius: 0.5rem;
   width: 100%;
 }
-
 .info .infolbl .menu .dropdown-content div {
   color: black;
   padding: 0.5rem 1rem;
@@ -86,29 +81,25 @@
 .info .infolbl .menu .dropdown-content {
   display: block;
 }
-
 .info .infolbl .menu .dropdown-content div {
   color: var(--Red);
   padding: 0.5rem;
   text-decoration: none;
   display: block;
 }
-
 .info .infolbl .menu .dropdown-content div:hover {
   border-radius: 0.5rem;
   color: var(--whiteColor);
   background-color: var(--graycolor);
 }
-.info .forms input::placeholder {
-  font-size: 1em; 
-  color: #b1aeae; 
+.info input::placeholder {
+  font-size: clamp(1rem, calc(2vw + 4vw), 1rem);  color: #b1aeae; 
   font-style: italic; 
 }
 .info label{
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
-  font-size: 1.4rem;
-  font-style: normal;
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.5rem);  font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
@@ -150,17 +141,10 @@
   margin-top: 1vh;
 }
 .info .form3 .btn:hover{
-  cursor: pointer;
-  background-color: var(--secondaryColor);
-  color: var(--Red);
-  border: none;
+ opacity: 0.7;
 }
 @media (max-width: 768px) {
   .forms, .form1, .form2, .form3 {
     flex-direction: column;
-    width: 100%;
-  }
-  .info input, .info label {
-    min-width: auto;
   }
 }
