--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -69,9 +69,7 @@
   letter-spacing: 0.5px;
 }
 .homesec1 .rightpart .btn:hover{
-  background-color: var(--secondaryColor);
-  color: var(--Red);
-  border: none;
+  opacity: 0.7;
 }
 
 
@@ -81,7 +79,7 @@
   width: 100%;
   /* max-width:100vw; */
   /* height: 38.9375vh; */
-  background: linear-gradient(90deg, rgba(190, 2, 2, 0.09) 0%, rgba(190, 2, 2, 0.5) 46.81%, rgba(190, 2, 2, 0.09) 100%);
+  background: linear-gradient(90deg, rgba(190, 2, 2, 0.09) 0%, rgba(190, 2, 2, 0.50) 46.81%, rgba(190, 2, 2, 0.09) 100%);
 }
 
 .nameh{
