--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -152,9 +152,7 @@
   cursor: pointer;
 }
 .log .flex1 .btn:hover {
-  background-color: var(--secondaryColor);
-  color: var(--Red);
-  border: none;
+ opacity: 0.7;
 }
 .log .btn-log{
   display: flex;
