--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -1,68 +1,59 @@
 .BP-page {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    padding: 0 0 0 5vw;
-    gap: 2.91rem;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 5vw;
+  gap: 2.91rem;
 }
-
-.BP-address {
-    p {
-        color: #be0202;
-        font-family: Roboto;
-        font-size: 2rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
+.BP-address p {
+  color: var(--Red);
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
-
 .BP-status {
-    max-width: 40rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    p {
-        color: #1f1f1f;
-        font-family: Roboto;
-        font-size: 1.25rem;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 1.45019rem;
-
-        /* 116.013% */
-        span {
-            color: #be0202;
-            font-family: Roboto;
-            font-size: 1.25rem;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 1.45019rem;
-            animation: none;
-        }
-    }
-
-    button {
-        text-align-last: center;
-        width: 18.75rem;
-        height: 2.1875rem;
-        flex-shrink: 0;
-        border-radius: 1rem;
-        background: #BE0202;
-        border: none;
-
-        p {
-            color: #FFF;
-            text-align: right;
-            font-family: Roboto;
-            font-size: 0.9375rem;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 1.45019rem;
-            /* 154.684% */
-        }
-    }
+  max-width: 40rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.BP-status p {
+  color: #1f1f1f;
+  font-family: Roboto;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.45019rem;
+}
+.BP-status span {
+  color: #be0202;
+  font-family: Roboto;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.45019rem;
+  animation: none;
+}
+.BP-status button {
+  text-align-last: center;
+  width: 18.75rem;
+  height: 2.1875rem;
+  flex-shrink: 0;
+  border-radius: 1rem;
+  background: var(--Red);
+  border: none;
+}
+.BP-status p {
+  color: #fff;
+  text-align: right;
+  font-family: Roboto;
+  font-size: 0.9375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.45019rem;
+  /* 154.684% */
 }
 
 /* date */
@@ -88,9 +79,9 @@
   gap: 1.2rem;
 }
 .BP-page .day-name {
-  color: #1F1F1F;
+  color: #1f1f1f;
   font-size: 2rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   word-wrap: break-word;
 }
@@ -107,7 +98,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 2rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   word-wrap: break-word;
 }
