--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -140,8 +140,6 @@
   color: var(--whiteColor);
   text-align: center;
   padding: 0.3em;
-  justify-content: center;
-  align-items: center;
   border-radius: 0.4em;
   border: 2px solid var(--Red);
   font-family: "Roboto", sans-serif;
@@ -150,6 +148,7 @@
   line-height: 100%;
   letter-spacing: 0.10em;
   cursor: pointer;
+  width: 100%;
 }
 .log .flex1 .btn:hover {
  opacity: 0.7;
