--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -128,18 +128,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 50vw;
-  height: 60vh;
+  /* width: 50vw;
+  height: 60vh; */
   flex-shrink: 0;
   border-radius: 0.625rem;
   border: 1px solid #d9d9d9;
   gap: 7vh;
-  padding: 2vh 1vw;
+  padding: 4vh 2vw;
   align-items: center;
 }
 
 .box .address {
-  color: #be0202;
+  color: var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 2.5vw;
   font-style: normal;
@@ -154,8 +154,8 @@
   justify-content: center;
   align-items: center;
   border-radius: 0.625rem;
-  border: 2px solid #be0202;
-  background: #be0202;
+  border: 2px solid var(--Red);
+  background: var(--Red);
   width: 100%;
   height: fixed;
 }
@@ -171,8 +171,8 @@
 
 .BP-data .box .sbp,
 .dbp p {
-  color: #1f1f1f;
-  font-family: Roboto;
+  color: var(--graycolor);
+  font-family: 'Roboto',sans-serif;
   font-size: 2vw;
   font-style: normal;
   font-weight: 400;
@@ -190,13 +190,13 @@
   justify-content: center;
   text-align: center;
   max-height: 3rem;
-  padding: 1rem 12rem;
+  padding: 1rem 15vw;
   align-items: center;
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
   font-family: 'Roboto',sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(1.5rem, calc(2vw + 5vw), 1.1rem);
   font-style: normal;
   font-weight: 500;
   line-height: 100%; 
