--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -1,19 +1,17 @@
-.forgetp{
-    max-width: 100vw; 
-   height: 100vh; 
+.forgetp {
+  max-width: 100vw;
+  height: 100vh;
   display: flex;
-justify-content: center;
-align-items: center;
-
+  justify-content: center;
+  align-items: center;
 }
 
-.forgetpassword{
-    padding: 2rem;
-width: 30rem;
+.forgetpassword {
+  padding: 2rem;
+  width: 30rem;
 
-
-border: 1px solid #BE0202;
-background: var(--Default-White, #FFF);
+  border: 1px solid #be0202;
+  background: var(--Default-White, #fff);
 }
 
 /*.first{
