--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -1,38 +1,29 @@
-.forget{
-    max-width: 100vw; 
+.forgetpassword_wrapper{
+    width: 100vw; 
    height: 100vh; 
   display: flex;
 justify-content: center;
 align-items: center;
-
+overflow-x: hidden;
 }
 
-.forgetpassword{
-    padding: 2rem;
+.forgetpassword_card{
+    padding: 2em;
 width: 30rem;
-
 
 border: 1px solid #BE0202;
 background: var(--Default-White, #FFF);
 }
 
-/*.first{
-    display: flex;
-flex-direction:column;
-align-items: center;
-gap: 1.5rem;
 
 
-
-}
-
-.first h1{
+.forgetpassword_title{
     color: rgba(190, 2, 2, 1);
     
 }
 
-.first p{
+.forgetpassword_desc{
     color: rgba(53, 53, 53, 1);
     
     
-}*/
+}
