--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -160,17 +160,14 @@
   height: fixed;
 }
 
-.BP-data .box .sbp,
-.dbp {
-  display: inline-flex;
+.BP-data .box .bp
+{
+  display:flex;
+  gap: 3.125rem;
   align-items: center;
   width: auto;
   height: auto;
-  justify-content: space-between;
-}
-
-.BP-data .box .sbp,
-.dbp p {
+  justify-content: center;
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
   font-size: 1.4rem;
@@ -179,11 +176,48 @@
   line-height: normal;
 }
 
+
 .BP-data .box .num {
-  width: 3.3125rem;
-  height: 2.6875rem;
-  flex-shrink: 0;
+    border-radius: 0.3125rem;
+    border: 1px solid var(--Red);
+    width: 3.3125rem;
+    height: 2.6875rem;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
+.BP-data .box .num .enum{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* padding: 0.5rem; */
+}
+.BP-data .box .num  .numb{
+  color: var(--graycolor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+}
+.BP-data .box .num .enum .icon{
+    display: flex;
+    flex-direction: column;
+}
+.BP-data .box .num .enum .icon .mini ,
+.BP-data .box .num .enum .icon .max{
+  cursor: pointer;
+  width: 1.5rem;
+  height: 1.5rem;
+  flex-shrink: 0;
+  margin: -0.2em 0;
+}
+
 
 .BP-data .box .add{
   display: flex;
