--- a/src/pages/details-bloodpressure.css
+++ b/src/pages/details-bloodpressure.css
@@ -123,7 +123,14 @@
 }
 
 /* diagram */
-
+.detailsbp .dBP-diagram{
+  max-width: 100%;
+  min-height: 23.125rem;
+  flex-shrink: 0;
+  border-radius: 0.625rem;
+  border: 1px solid var(--Red);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 
 
 
@@ -136,12 +143,14 @@
 
 /* inf-det */
 .detailsbp .inf-det {
-  max-width: 84.375rem;
+  max-width: 100%;
   min-height: 16rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  border-radius: 0.625rem;
+  border: 1px solid #D9D9D9;
 }
 .detailsbp .inf-det h3 {
   color: var(--graycolor);
@@ -160,7 +169,7 @@
   line-height: normal;
 }
 .detailsbp .inf-det p {
-  max-width: 81.5rem;
+  max-width: 97%;
   color: var(--darkgraycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
