--- a/src/pages/details-bloodsuger.css
+++ b/src/pages/details-bloodsuger.css
@@ -170,8 +170,10 @@
 
 /* inf-det */
 .bloodsugard .inf-det {
-  max-width: 84.375rem;
+  max-width: 100%;
   min-height: 16rem;
+  border-radius: 0.625rem;
+  border: 1px solid #D9D9D9;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -194,7 +196,7 @@
   line-height: normal;
 }
 .bloodsugard .inf-det p {
-  max-width: 81.5rem;
+  max-width: 97%;
   color: var(--darkgraycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
