--- a/src/pages/details-bloodpressure.css
+++ b/src/pages/details-bloodpressure.css
@@ -131,12 +131,46 @@
   border: 1px solid var(--Red);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
-
-
-
-
-
+.detailsbp .dBP-diagram .diagrams{
+  display: flex;
+  flex-direction: row;
+  gap: 7rem;
+  padding: 1.5rem;
+}
+.detailsbp .dBP-diagram .diagrams .dig{
+  width: 50%;
+  height: 100%;
+}
+.detailsbp .dBP-diagram .diagrams .dig .bound{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.detailsbp .dBP-diagram .diagrams .dig .bound p{
+  display: flex;
+  align-items: center;
+  color: var(--graycolor);
+  text-align: right;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.45019rem; /* 116.013% */
+}
+.detailsbp .dBP-diagram .diagrams .dig .bound .boun{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+}
+.detailsbp .dBP-diagram .diagrams .dig .bound .boun .rec{
+  width: 1.84363rem;
+  height: 1.875rem;
+  flex-shrink: 0;
+  border-radius: 0.3125rem;
+  border: 1px solid var(--Red);
+  background: var(--Red);
+}
 
 
 
