--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -70,6 +70,7 @@ align-items: flex-start;
 gap: 0.25rem;
 align-self: stretch;
 
+
 }
 
 .remailr{
@@ -92,12 +93,18 @@ align-items: center;
 gap: 0.5rem;
 align-self: stretch;
 border-radius: 0.625rem;
-border: 1px solid #BE0202;
+border: 0.1rem solid #BE0202;
 font-size: 1rem;
+}
+
+.remair:hover{
+    border: 0.1rem solid #BE0202;
 }
 
 .rbtr{
     display: flex;
+    width: 30rem;
+    
 height: 3rem;
 justify-content: center;
 align-items: center;
