--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -117,6 +117,7 @@ padding: 0rem 1rem;
 justify-content: center;
 align-items: center;
 gap: 0.625rem;
+font-size: 1.2rem;
 color: #fff;
 cursor: pointer;
 }
