--- a/src/pages/New_Password.css
+++ b/src/pages/New_Password.css
@@ -79,9 +79,9 @@ border-radius: 0.625rem;
 border: 1px solid #BE0202;
 }
 
-.rbtsd{
+.rbtrd{
     display: flex;
-width: 33.5625rem;
+width: 31.5625rem;
 height: 3rem;
 padding: 1rem 0.75rem;
 justify-content: center;
@@ -95,5 +95,5 @@ font-size: 1rem;
 }
 
 .buttorr{
-    padding-left: 4rem;
+    padding-right: 1rem;
 }
