--- a/src/pages/New_Password.css
+++ b/src/pages/New_Password.css
@@ -97,3 +97,21 @@ font-size: 1rem;
 .buttorr{
     padding-right: 1rem;
 }
+
+.ttonr svg{
+    position: absolute;
+    right: 11rem;
+    top: 17.3rem;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.tronr svg{
+    position: absolute;
+    right: 11rem;
+    top: 24.5rem;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
