--- a/src/pages/New_Password.css
+++ b/src/pages/New_Password.css
@@ -43,6 +43,7 @@ line-height: normal;
 
 .rrowr{
     display: flex;
+    position: relative;
 width: 35rem;
 flex-direction: column;
 align-items: flex-start;
@@ -62,6 +63,7 @@ border: 1px solid #BE0202;
 
 .lbr4{
     display: flex;
+    position: relative;
 width: 35rem;
 flex-direction: column;
 align-items: flex-start;
@@ -100,8 +102,8 @@ font-size: 1rem;
 
 .ttonr svg{
     position: absolute;
-    right: 11rem;
-    top: 17.3rem;
+    right: 4.5rem;
+    top: 2.3rem;
     border: 0;
     background-color: transparent;
     cursor: pointer;
@@ -109,8 +111,8 @@ font-size: 1rem;
 
 .tronr svg{
     position: absolute;
-    right: 11rem;
-    top: 24.5rem;
+    right: 4.5rem;
+    top: 2.2rem;
     border: 0;
     background-color: transparent;
     cursor: pointer;
