--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -158,7 +158,7 @@
 .about-us-section3 .title h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 2rem;
+  font-size: clamp(1rem, calc(1vw + 3vw), 2rem);    
   font-weight: 700;
   line-height: 110%;
 }
@@ -244,7 +244,7 @@ img-btn {
 .about-us-section4 .title h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 32px;
+  font-size: clamp(1rem, calc(1vw + 3vw), 2rem);    
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -257,7 +257,7 @@ img-btn {
   gap: 1.5em;
   padding: 2vw 0vh;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: flex-start;
 }
@@ -271,7 +271,7 @@ img-btn {
 .Ourdevelopers .developer h4 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 2rem;
+  font-size: clamp(1rem, calc(2vw + 4vw), 2rem);    
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -290,6 +290,11 @@ img-btn {
   gap: 1rem;
 }
 
+@media (max-width: 1000px) {
+   .Ourdevelopers{
+      flex-wrap: wrap;
+   }
+}
 @media (max-width: 768px) {
   .about-us-section,
   .about-us-section2,
