--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -30,7 +30,7 @@
 }
 .BP-status span {
   color: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
@@ -46,7 +46,7 @@
 }
 .BP-status p {
   color: #1f1f1f;
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
@@ -56,7 +56,7 @@
 .BP-status button p {
   color: #fff;
   text-align: right;
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 0.9375rem;
   font-style: normal;
   font-weight: 400;
@@ -158,36 +158,34 @@
   height: fixed;
 }
 
-.BP-data .box .bp
-{
-  display:flex;
+.BP-data .box .bp {
+  display: flex;
   gap: 3.125rem;
   align-items: center;
   width: auto;
   height: auto;
   justify-content: center;
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.4rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
-
 .BP-data .box .num {
-    border-radius: 0.3125rem;
-    border: 1px solid var(--Red);
-    width: 3.3125rem;
-    height: 2.6875rem;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  border-radius: 0.3125rem;
+  border: 1px solid var(--Red);
+  width: 3.3125rem;
+  height: 2.6875rem;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
-.BP-data .box .num .enum{
+.BP-data .box .num .enum {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -195,20 +193,20 @@
   text-align: center;
   /* padding: 0.5rem; */
 }
-.BP-data .box .num  .numb{
+.BP-data .box .num .numb {
   color: var(--graycolor);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
   line-height: 110%;
 }
-.BP-data .box .num .enum .icon{
-    display: flex;
-    flex-direction: column;
+.BP-data .box .num .enum .icon {
+  display: flex;
+  flex-direction: column;
 }
-.BP-data .box .num .enum .icon .mini ,
-.BP-data .box .num .enum .icon .max{
+.BP-data .box .num .enum .icon .mini,
+.BP-data .box .num .enum .icon .max {
   cursor: pointer;
   width: 1.5rem;
   height: 1.5rem;
@@ -216,8 +214,7 @@
   margin: -0.2em 0;
 }
 
-
-.BP-data .box .add{
+.BP-data .box .add {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -227,13 +224,13 @@
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: clamp(1.5rem, calc(2vw + 5vw), 1.1rem);
   font-style: normal;
   font-weight: 500;
-  line-height: 100%; 
+  line-height: 100%;
   letter-spacing: 0.03125rem;
 }
 .BP-data .box .add:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
