--- a/src/pages/Activity.css
+++ b/src/pages/Activity.css
@@ -32,40 +32,37 @@
   box-shadow: 4rem;
 }
 
+/* table */
 
-  /* table */
+.table {
+  width: 33rem;
+  border: 0.1rem solid var(--Red);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  margin: 0 2rem 2rem 25rem;
+}
 
-  .table{
-    width: 33rem;
-    border: 0.1rem solid var(--Red);
-    border-radius: 1rem;
-    padding: 1.5rem;
-    margin: 0 2rem 2rem 25rem;
-  }
-  
-  .table .head{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    align-content: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    font-family: 'Roboto',sans-serif;
-    font-size: 1.1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-right: 2rem;
-  }
-  
-  .table .head .trans{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: var(--Red);
-  }
-  
-  
+.table .head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 2rem;
+}
+
+.table .head .trans {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: var(--Red);
+}
 
 /* blood-pressure-sec */
 
@@ -305,33 +302,31 @@
   opacity: 0.7;
 }
 
-
-
 /* blood sugar */
-.average{
+.average {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.average h5{
-  color: #1F1F1F;
-  font-family: 'Roboto',sans-serif;
+.average h5 {
+  color: #1f1f1f;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
   line-height: 1.45019rem; /* 116.013% */
 }
 
-.ratio{
+.ratio {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.ratio p{
-  color: #BE0202;
-  font-family: 'Roboto',sans-serif;
+.ratio p {
+  color: #be0202;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
@@ -339,9 +334,9 @@
   margin: -0.1rem 0 0 0.3rem;
 }
 
-.ratio h5{
-  color: #1F1F1F;
-  font-family: 'Roboto',sans-serif;
+.ratio h5 {
+  color: #1f1f1f;
+  font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
@@ -579,14 +574,6 @@
 .bloodsugarda .btn .addrec:hover {
   opacity: 0.7;
 }
-
-
-
-
-
-
-
-
 
 @media (max-width: 750px) {
   .detailsbpa .dBP-diagram .diagrams {
